# tictactoe

./: .gitattributes  .gitignore  README.md
sem_3_laba32/: CMakeLists.txt  GUI.h  Graph.h  MMA.h  Tests.h  main.cpp
